Add Catch and listener example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,6 @@ endif()
 # Third party libraries
 
 # Boost
-#set(BOOST_ROOT /cygdrive/c/dev/boost_1_55_0 CACHE PATH "Boost install directory")      # Cygwin
 #set(BOOST_LIBRARYDIR ${BOOST_ROOT}/bin.v2/libs CACHE PATH "Boost library directory")   # Cygwin
 set (Boost_USE_STATIC_LIBS ON)
 set (Boost_USE_MULTITHREAD ON)
@@ -24,7 +23,6 @@ if (Boost_FOUND)
 endif ()
 
 # CAF
-#set(CAF_DIR /cygdrive/c/dev/caf-0.15.1-install CACHE PATH "CAF install directory")
 set(CAF_DIR ${CONAN_CAF_ROOT} CACHE PATH "CAF install directory")
 set(CAF_INC_DIR ${CAF_DIR}/include)
 set(CAF_LIB_DIR ${CAF_DIR}/lib)
@@ -39,28 +37,27 @@ set(CAF_LIBS
 
 # Catch
 set(CATCH_INC_DIR ${CONAN_INCLUDE_DIRS_CATCH} CACHE PATH "Catch include directory")      # Conan
-#set(CATCH_INC_DIR /cygdrive/c/dev/Catch/include CACHE PATH "Catch include directory")   # Cygwin
 
 # Foonathan
 include_directories(${CONAN_INCLUDE_DIRS_DEBUG_ASSERT})
 include_directories(${CONAN_INCLUDE_DIRS_TYPE_SAFE})
 
 # gRPC
-set(GRPC_INC_DIR ${CONAN_INCLUDE_DIRS_GRPC} CACHE PATH "gRPC include directory")         # Conan
-set(GRPC_LIB_DIR ${CONAN_LIB_DIRS_GRPC} CACHE PATH "gRPC libs directory")                # Conan
-set(GRPC_BIN_DIR ${CONAN_BIN_DIRS_GRPC} CACHE PATH "gRPC bin directory")                 # Conan
-set(GRPC_LIBS ${GRPC_LIB_DIR}/libgrpc++_unsecure.a ${GRPC_LIB_DIR}/libgrpc.a)
+#set(GRPC_INC_DIR ${CONAN_INCLUDE_DIRS_GRPC} CACHE PATH "gRPC include directory")         # Conan
+#set(GRPC_LIB_DIR ${CONAN_LIB_DIRS_GRPC} CACHE PATH "gRPC libs directory")                # Conan
+#set(GRPC_BIN_DIR ${CONAN_BIN_DIRS_GRPC} CACHE PATH "gRPC bin directory")                 # Conan
+#set(GRPC_LIBS ${GRPC_LIB_DIR}/libgrpc++_unsecure.a ${GRPC_LIB_DIR}/libgrpc.a)
 
 # libuv
-set(LIBUV_INC_DIR ${CONAN_INCLUDE_DIRS_LIBUV} CACHE PATH "libuv include directory")      # Conan
-set(LIBUV_LIB_DIR ${CONAN_LIB_DIRS_LIBUV} CACHE PATH "libuv lib dir")                    # Conan
-set(LIBUV_LIBS ${LIBUV_LIB_DIR}/libuv.a)
+#set(LIBUV_INC_DIR ${CONAN_INCLUDE_DIRS_LIBUV} CACHE PATH "libuv include directory")      # Conan
+#set(LIBUV_LIB_DIR ${CONAN_LIB_DIRS_LIBUV} CACHE PATH "libuv lib dir")                    # Conan
+#set(LIBUV_LIBS ${LIBUV_LIB_DIR}/libuv.a)
 
 # Protobuf
-set(Protobuf_LIBRARY ${CONAN_PROTOBUF_ROOT})                                             # Conan
-find_package(Protobuf)
-set(PROTOBUF_INC_DIR ${PROTOBUF_INCLUDE_DIRS} CACHE PATH "Protobuf include directory")
-set(PROTOBUF_LIBS ${PROTOBUF_LIBRARIES}/lib/libprotobuf.a CACHE PATH "Protobuf libs")
+#set(Protobuf_LIBRARY ${CONAN_PROTOBUF_ROOT})                                             # Conan
+#find_package(Protobuf)
+#set(PROTOBUF_INC_DIR ${PROTOBUF_INCLUDE_DIRS} CACHE PATH "Protobuf include directory")
+#set(PROTOBUF_LIBS ${PROTOBUF_LIBRARIES}/lib/libprotobuf.a CACHE PATH "Protobuf libs")
 
 # Range-v3
 include_directories(${CONAN_INCLUDE_DIRS_RANGE-V3})
@@ -72,10 +69,8 @@ include_directories(${CONAN_INCLUDE_DIRS_SPDLOG})
 set(ZLIB_LIBS ${CONAN_LIB_DIRS_ZLIB}/libz.a CACHE PATH "Zlib library")                   # Conan
 
 # ZMQ
-set(ZMQ_INC_DIR ${CONAN_INCLUDE_DIRS_CPPZMQ} CACHE PATH "ZMQ include directory")         # Conan
-set(ZMQ_LIBS ${CONAN_LIB_DIRS_LIBZMQ}/libzmq-static.a CACHE PATH "ZMQ libraries")        # Conan
-#set(ZMQ_INC_DIR /cygdrive/c/dev/cppzmq CACHE PATH "ZMQ include directory")              # Cygwin
-#set(ZMQ_LIBS -lzmq CACHE STRING "ZMQ library")                                          # Cygwin
+#set(ZMQ_INC_DIR ${CONAN_INCLUDE_DIRS_CPPZMQ} CACHE PATH "ZMQ include directory")         # Conan
+#set(ZMQ_LIBS ${CONAN_LIB_DIRS_LIBZMQ}/libzmq-static.a CACHE PATH "ZMQ libraries")        # Conan
 
 ##################################################################################################
 
@@ -85,6 +80,7 @@ include_directories(${CMAKE_SOURCE_DIR})
 # Switch on DEBUG code
 add_definitions(-DDEBUG)
 
+add_executable(catch_example catch_example.cpp catch_main.cpp CatchTests.cpp)
 add_executable(cu_ordering_test CUTrace.h cu_ordering_test.cpp cu_ordering_test2.cpp)
 add_executable(experiments main.cpp)
 add_executable(fmt fmt.cpp)
@@ -101,5 +97,5 @@ add_executable(numeric_range numeric_range.cpp)
 #add_subdirectory(caf)
 add_subdirectory(common)
 add_subdirectory(gaffer)
-add_subdirectory(grpc)
+#add_subdirectory(grpc)
 #add_subdirectory(zmq)
