--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -13,7 +13,7 @@ set(PROTOS
 include_directories(${CAF_INC_DIR})
 
 # Protobuf
-protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTOS})
+#protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTOS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 add_library(common ${SOURCES} ${PROTO_SRCS} ${PROTO_HDRS})
