--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ add_executable(cu_ordering_test CUTrace.h cu_ordering_test.cpp cu_ordering_test2
 add_executable(experiments main.cpp)
 add_executable(fmt fmt.cpp)
 add_executable(grandchild_override grandchild_override.cpp)
+add_executable(numeric_range numeric_range.cpp)
 add_executable(ranges ranges.cpp)
 add_executable(reference_slicing reference_slicing.cpp)
 add_executable(stop_problem stop_problem.cpp)
@@ -95,7 +96,7 @@ add_executable(template_via_pointer template_via_pointer.cpp)
 add_executable(tuple_iterator_main tuple_iterator_main.cpp tuple_iterator.h)
 add_executable(type_index type_index.cpp)
 add_executable(type_safe type_safe.cpp)
-add_executable(numeric_range numeric_range.cpp)
+add_executable(variant_server variant_server.cpp)
 
 add_subdirectory(caf)
 add_subdirectory(common)
