is_detected, func_perf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,8 @@ add_executable(catch_example catch_example.cpp catch_main.cpp CatchTests.cpp)
 add_executable(cu_ordering_test CUTrace.h cu_ordering_test.cpp cu_ordering_test2.cpp)
 add_executable(experiments main.cpp)
 add_executable(fmt fmt.cpp)
+add_executable(func_perf func_perf.cpp func_perf_funcs.cpp)
+add_executable(is_detected is_detected.cpp)
 add_executable(grandchild_override grandchild_override.cpp)
 add_executable(numeric_range numeric_range.cpp)
 add_executable(ranges ranges.cpp)
