--- a/caf/CMakeLists.txt
+++ b/caf/CMakeLists.txt
@@ -1,5 +1,6 @@
-include_directories(${CAF_INC_DIR})
-
 add_executable(caf_test caf_test.cpp)
 
-target_link_libraries(caf_test ${CAF_LIBS})
+# Uncomment to temporarily add CAF source to project for debugging (make sure it's the same version!)
+#add_subdirectory(/Users/eric/IdeaProjects/actor-framework caf-source)
+
+target_link_libraries(caf_test CONAN_PKG::caf)
