--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -1,14 +1,12 @@
 set(SOURCES
         ScopedThread.h
-        ThreadResource.h )
-
-# CAF
-include_directories(${CAF_INC_DIR})
+        ThreadResource.h)
 
 # Protobuf
 #protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTOS})
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
+#include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-add_library(common ${SOURCES} ${PROTO_SRCS} ${PROTO_HDRS})
+#add_library(common ${SOURCES} ${PROTO_SRCS} ${PROTO_HDRS})
+#target_link_libraries(common CONAN_PKG::caf CONAN_PKG::Protobuf)
 
 add_subdirectory(test)
