--- a/common/test/CMakeLists.txt
+++ b/common/test/CMakeLists.txt
@@ -2,7 +2,5 @@ set(SOURCES
         main.cpp
         ScopedThreadTest.cpp)
 
-include_directories(${CATCH_INC_DIR})
-
 add_executable(common_test ${SOURCES})
-target_link_libraries(common_test common ${PROTOBUF_LIBS})
+target_link_libraries(common_test common CONAN_PKG::catch)
