--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,4 +58,4 @@ add_subdirectory(caf)
 add_subdirectory(common)
 add_subdirectory(gaffer)
 #add_subdirectory(grpc)
-#add_subdirectory(zmq)
+add_subdirectory(zmq)
