Add NamedType and NamedOptional.  strong_optionals and pretty_sfinae.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(func_perf func_perf.cpp func_perf_funcs.cpp)
 add_executable(is_detected is_detected.cpp)
 add_executable(grandchild_override grandchild_override.cpp)
 add_executable(numeric_range numeric_range.cpp)
+add_executable(pretty_sfinae pretty_sfinae.cpp)
 
 add_executable(ranges ranges.cpp)
 target_link_libraries(ranges CONAN_PKG::range-v3)
@@ -49,6 +50,7 @@ add_executable(reference_slicing reference_slicing.cpp)
 add_executable(rvalue_refs_in_apis rvalue_refs_in_apis.cpp)
 add_executable(self_registering_factory_lambda self_registering_factory_lambda.cpp)
 add_executable(stop_problem stop_problem.cpp)
+add_executable(strong_optionals strong_optionals.cpp)
 add_executable(template_via_pointer template_via_pointer.cpp)
 
 add_executable(to_string_detected to_string_detected.cpp match_hana.h)
