--- a/common/test/CMakeLists.txt
+++ b/common/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCES
         main.cpp
+        ExpectedTest.cpp
         ScopedThreadTest.cpp)
 
 add_executable(common_test ${SOURCES})
-target_link_libraries(common_test common CONAN_PKG::catch)
+target_link_libraries(common_test CONAN_PKG::catch2)
